# EFingPlanner

./: .gitattributes  .gitignore  .hermes.md  .pre-commit-config.yaml  .remarkignore  .yamllint.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_CHAT_PROMPTS.md  GEMINI.md  GETTING_STARTED.md  GETTING_STARTED_EXISTING_REPO.md  LICENSE  LICENSING.md  README.md  SECURITY.md  TEMPLATE_UPDATE_PROCEDURE.md  _ADOPTION-DIFFICULTIES.md  _TODO-repo-init.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.claude/hooks/: session-start.sh
.cursor/rules/: repository-instructions.mdc
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
.github/instructions/: python.instructions.md
.github/scripts/: check-prohibited-placeholders.py  pinned-check-jsonschema-rev.py
.github/workflows/: data-ci.yml  markdownlint.yml  toolchain-eol.yml
.template-sync/: marker.yml
.template-sync/scripts/: materialize_downstream_adoption.py  run_first_adoption_checks.py
destinations/japan/: README.md
docs/: PR_REVIEW_PROMPTS.md
docs/spec/: full-oer-companion.md  lean-spec.md  specification.md
framework/: PROJECT_ROADMAP.md
framework/docs/: build_style_and_vocab.md  privacy_and_safety.md
framework/parent_guide/: README.md  adult_roles.md  (+5 more)
schemas/: README.md
tests/: test_check_prohibited_placeholders.py  test_dependabot_schema.py  test_materialize_downstream_adoption.py  test_run_first_adoption_checks.py
(+43 files in other folders)
