# pyproject.toml
#
# This repository EXCLUDES the template's `python` package module, but RETAINS
# the `template-sync-support` and `schema` modules, whose regression tests
# (under tests/) are written in Python. This file is kept as a documented LOCAL
# OVERRIDE (recorded in .template-sync/marker.yml) solely to provide the pytest
# configuration those retained tests need. It intentionally carries no Python
# packaging metadata (no [build-system]/[project]); this is a Markdown
# educational-content repository, not a Python package.

[tool.pytest.ini_options]
strict_markers = true
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "upstream_template_only: tests that rely on the upstream template repository's complete optional module set, protected governance files, unreplaced placeholders, or maintainer-only context",
    "downstream_template_support: tests useful for downstream template-support validation; the official downstream gate uses negative upstream_template_only selection instead",
    "slow: tests that run slower integration scenarios and may be isolated during local iteration",
]
